docker fixes and refactoring
